# Tabby

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  knip.json  package.json  playwright.config.ts  spec.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.ralph/: contract-audit.md  ddd-v3-baseline.md  progress.md  risk-map.md  test-strategy.md
docs/: about.md  index.md
scripts/: check-dto-boundary.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/tabby-contracts/: Cargo.toml
src-tauri/crates/tabby-contracts/src/: git_dtos.rs  lib.rs  value_objects.rs
src-tauri/crates/tabby-git/: Cargo.toml
src-tauri/crates/tabby-git/src/: blame.rs  branch.rs  commit.rs  diff.rs  file_status.rs  lib.rs  repository_state.rs  stash.rs  value_objects.rs
src-tauri/crates/tabby-kernel/: Cargo.toml
src-tauri/crates/tabby-kernel/src/: lib.rs  value_objects.rs
src-tauri/crates/tabby-runtime/: Cargo.toml
src-tauri/crates/tabby-runtime/src/: ids.rs  lib.rs
src-tauri/crates/tabby-settings/: Cargo.toml
src-tauri/crates/tabby-settings/src/: lib.rs  persistence.rs  value_objects.rs
src-tauri/crates/tabby-workspace/: Cargo.toml
src-tauri/crates/tabby-workspace/src/: content.rs  ids.rs  layout.rs  lib.rs
src-tauri/icons/: dev-icon.icns  icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  menu.rs
src-tauri/src/application/: bootstrap_service.rs  command_dispatch_integration_tests.rs  commands.rs  coordinator.rs  git_service.rs  mod.rs  ports.rs  projection_publisher.rs  runtime_coordinator.rs  runtime_integration_tests.rs  runtime_lifecycle_tests.rs  runtime_observation_receiver.rs  runtime_service.rs  seed_factory.rs  settings_service.rs  workspace_service.rs
src-tauri/src/browser/: commands.rs
src-tauri/src/commands/: browser.rs  mod.rs  pty.rs  settings.rs  shell.rs  workspace.rs
src-tauri/src/domain/: commands.rs  error.rs  events.rs  mod.rs  profiles.rs  settings.rs  snapshot.rs  split_tree.rs  types.rs
src-tauri/src/infrastructure/: blame_parser.rs  cli_git_adapter.rs  diff_parser.rs  mod.rs  porcelain_parser.rs  stash_parser.rs  tauri_browser_surface_adapter.rs  tauri_projection_publisher.rs  tauri_store_preferences_repository.rs
src-tauri/src/managers/: coordinator.rs  grid.rs  mod.rs  pty.rs  settings.rs  tab.rs
src-tauri/src/mapping/: command_mappers.rs  dto_mappers.rs  git_mappers.rs  mod.rs  runtime_mappers.rs  settings_mappers.rs  workspace_mappers.rs
src-tauri/src/settings/: commands.rs  mod.rs
src-tauri/src/settings/domain/: app_settings.rs  mod.rs  profiles.rs
src-tauri/src/settings/repository/: settings_repository.rs
src-tauri/src/shared/: error.rs  events.rs  ids.rs  mod.rs
src-tauri/src/shell/: browser_surface.rs  error.rs  mapping.rs  mod.rs  pty.rs
src-tauri/src/terminal/: commands.rs
src-tauri/src/terminal/service/: command_builder.rs  mod.rs  pty_service.rs  utf8_decoder.rs
src-tauri/src/workspace/: mod.rs
src-tauri/src/workspace/commands/: mod.rs  workspace_commands.rs
src-tauri/src/workspace/domain/: mod.rs  pane.rs  requests.rs  snapshot.rs
src-tauri/src/workspace/domain/layout/: mod.rs  presets.rs  split_node.rs  split_tree.rs
src-tauri/src/workspace/service/: mod.rs  tab_service.rs
src-tauri/tests/: arch_ddd_violations.rs  arch_domain_crate_dependencies.rs  browser_commands_through_runtime_service.rs
(+241 files in other folders)
