[package]
name = "tabby"
version = "0.1.0"
description = "Tabby terminal workspace"
authors = ["markbrutx"]
edition = "2021"
license = "MIT"
default-run = "tabby"

[lib]
name = "tabby_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
