[package]
name = "tabby"
version = "0.1.0"
description = "Tabby terminal workspace"
authors = ["markbrutx"]
edition = "2021"
license = "MIT"
default-run = "tabby"

[lib]
name = "tabby_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [
    "crates/tabby-contracts",
    "crates/tabby-kernel",
    "crates/tabby-runtime",
    "crates/tabby-settings",
    "crates/tabby-workspace",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "=0.0.9"
tabby-contracts = { path = "crates/tabby-contracts" }
tabby-runtime = { path = "crates/tabby-runtime" }
tabby-settings = { path = "crates/tabby-settings" }
tabby-workspace = { path = "crates/tabby-workspace" }
tauri = { version = "2.10.2", features = ["macos-private-api", "unstable"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
tauri-plugin-store = "2.4.2"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1.22.0", features = ["serde", "v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
